# Cluster_alignment

./: CMakeLists.txt  ReadMe.txt  cluster.pcd  cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  model_aligned_0.pcd  model_aligned_1.pcd  sence_after_extract.pcd
data/: object_templates.txt
src/: cluster_alignment.cpp  libForPCL  plate_alignment.cpp
src/LibForPCL/include/: alignment.h
src/LibForPCL/src/: alignment.cpp
src/libForPCL/include/: alignment.h  cook_geometry.h  cook_seg.h
src/libForPCL/src/: alignment.cpp  cook_geometry.cpp  cook_seg.cpp
